| Bug #44025 | Some schema names longer than 8 characters not supported by IBMDB2I | ||
|---|---|---|---|
| Submitted: | 1 Apr 2009 21:09 | Modified: | 14 Jul 2009 14:59 |
| Reporter: | Tim Clark | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: DB2SE for IBM i | Severity: | S3 (Non-critical) |
| Version: | 5.1.33 | OS: | Any (IBM i 5.4) |
| Assigned to: | Tim Clark | CPU Architecture: | Any |
[1 Apr 2009 21:09]
Tim Clark
[10 Apr 2009 7:48]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/71851 2868 Narayanan V 2009-04-10 Bug#44025 Some schema names longer than 8 characters not supported by IBMDB2I On IBM i 5.4, schemas with names that are longer than 8 characters and contain digits or an underscore cannot contain IBMDB2I tables, even though this should theoritically be possible if all alpha characters are uppercase. THe current patch fixes the IBMDB2I engine to allow digits and the underscore(_) to be used in schema names longer than 8 characters on IBM i 5.4. @ storage/ibmdb2i/db2i_misc.h The function which detected whether the operating system would treat a schema as an "ordinary identifier" (allowing 10 characters in the name instead of 8) did not cover all possible cases.Function was renamed and enhanced to detect all possible cases of "ordinary identifiers". @ storage/ibmdb2i/ha_ibmdb2i.cc use the renamed function to cover all possible cases of ordinary identifiers.
[5 May 2009 19:38]
Bugs System
Pushed into 5.1.35 (revid:davi.arnaut@sun.com-20090505190206-9xmh7dlc6kom8exp) (version source revid:davi.arnaut@sun.com-20090505190206-9xmh7dlc6kom8exp) (merge vers: 5.1.35) (pib:6)
[6 May 2009 14:11]
Bugs System
Pushed into 6.0.12-alpha (revid:svoj@sun.com-20090506125450-yokcmvqf2g7jhujq) (version source revid:chad@mysql.com-20090413143011-ln9yuyfzrrwzh4vg) (merge vers: 6.0.11-alpha) (pib:6)
[15 Jun 2009 8:25]
Bugs System
Pushed into 5.1.35-ndb-6.3.26 (revid:jonas@mysql.com-20090615074202-0r5r2jmi83tww6sf) (version source revid:jonas@mysql.com-20090615070837-9pccutgc7repvb4d) (merge vers: 5.1.35-ndb-6.3.26) (pib:6)
[15 Jun 2009 9:04]
Bugs System
Pushed into 5.1.35-ndb-7.0.7 (revid:jonas@mysql.com-20090615074335-9hcltksp5cu5fucn) (version source revid:jonas@mysql.com-20090615072714-rmfkvrbbipd9r32c) (merge vers: 5.1.35-ndb-7.0.7) (pib:6)
[15 Jun 2009 9:45]
Bugs System
Pushed into 5.1.35-ndb-6.2.19 (revid:jonas@mysql.com-20090615061520-sq7ds4yw299ggugm) (version source revid:jonas@mysql.com-20090615054654-ebgpz7elwu1xj36j) (merge vers: 5.1.35-ndb-6.2.19) (pib:6)
[14 Jul 2009 14:59]
MC Brown
A note has been added to the 5.1.35, 6.0.12, 5.1.35-ndb-6.3.26, 5.1.35-ndb-6.2.19, 5.1.35-ndb-7.0.7: Some schema names longer than 8 characters were not supported by IBMDB2I. The engine has been updated to allow digits and underscore characters to be used in names longer than 8 characters.
