storage/ibmdb2i/db2i_misc.h
@@ -92,11 +92,17 @@ bool convertMySQLNameToDB2Name(const char* input,
   return (o <= outlen-1);
 }
 
-bool isUpperOrQuote(const CHARSET_INFO* cs, const char* s)
+bool isOrdinaryIdentifier(const char* s)
 {
   while (*s)
   {
-    if (my_isupper(cs, *s) || (*s == '"'))
+    if (my_isupper(system_charset_info, *s) ||
+        my_isdigit(system_charset_info, *s) ||
+        (*s == '_') ||
+        (*s == '@') ||
+        (*s == '$') ||
+        (*s == '#') ||
+        (*s == '"'))
       ++s;
     else
       return false;
